--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>To Do List</title>
-
+    <script src="https://kit.fontawesome.com/e7cf25db24.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
